overflow:hidden to avoid scrollbars

--- a/static/style.css
+++ b/static/style.css
@@ -246,7 +246,7 @@ a:hover {
 	z-index: 1;
 	background: #ffffff;
   box-shadow: 2px 0 15px -2px #888;
-	overflow: auto;
+	overflow: hidden;
 }
 
 .header-action {
